kubernetes/apps/base/home-assistant/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: home-assistant
  template:
    metadata:
      labels:
        app.kubernetes.io/name: home-assistant
    spec:
      containers:
        - name: home-assistant
          image: "ghcr.io/home-assistant/home-assistant:2026.9.3"
          ports:
            - name: http
              containerPort: 8123
              protocol: TCP
          volumeMounts:
            - mountPath: /config/configuration.yaml
              name: configuration-yaml
              subPath: configuration.yaml
      volumes:
        - name: configuration-yaml
          configMap:
            name: configuration-yaml
